# backend-web

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
app/: .env
app/api/v1/endpoints/: Untitled-1.py  agent_login_webhook.py  claimworking proto  conv_login_web.py  events.py  extension of userreg.txt  people.py
app/core/: config.py
app/db/: neo1final.py  neo4j.py
app/models/: person.py
app/services/: process.py
documentation/: BlobFolderStructure.md  Taxonomy.md
migrations/versions/: 034b6360f40e_add_unique_constraint_2_on_user_id_.py  0486408dd1de_added_category_again.py  123ec577cd6d_nullable_datetime.py  5c9a84458b87_add_unique_constraint_on_user_id_skill_.py  8d188c193f3e_full_name_field_added.py  9c4b90655a4a_add_registration_category_column_in_.py  9f44d3f569b0_added_type_for_comapnies.py  d511850e1ee0_create_datamodel.py  f90c6a1893b5_removed_type_columns_in_skill_interests.py
postgres/: models.py  populate_embeddings.py
services/services/: person_service.py
